# faq-assistant

./: .gitignore  Makefile  README.md  config.toml  pyproject.toml  samconfig.toml  template.yaml  wrangler.jsonc
.claude/skills/faq-feedback-loop/: SKILL.md
.github/workflows/: deploy.yml  rebuild-index.yml  test.yml
docs/: deployment.md  observability.md  openai-batch-processing.md
evals/: .gitignore  README.md  build_dataset.py  lib.py  run_eval.py
evals/data/: answer_gaps.jsonl  ground_truth.jsonl  slack_sample.jsonl
evals/results/: minsearch__current.json  minsearch__expansion.json  minsearch__keywords.json  minsearch__light.json  minsearch__minimal.json  minsearch__raw.json  minsearch__verbatim.json  summary__minsearch.json  summary__zerosearch.json  zerosearch__current.json  zerosearch__expansion.json  zerosearch__keywords.json  zerosearch__light.json  zerosearch__minimal.json  zerosearch__production.json  zerosearch__raw.json  zerosearch__verbatim.json
scripts/: build_search_corpus.py  build_search_index.py  check_handler.py  check_rag.py  check_structured_output.py  check_structured_parsing.py  check_telegram.py  compare_retrieval.py  compile_config.py  load_embedding_artifact.py  save_batch_embeddings.py  slack_faq_review.py  verify_faq_retrieval.py
src/: worker.py
src/faq_assistant/: __init__.py  answering.py  chunking.py  cli.py  cloudflare.py  config.py  corpus.py  generated_config.py  handler.py  ingest.py  matching.py  minsearch.py  models.py  openai.py  search_index.py  sources.py  structured.py  worker_interop.py
src/zerosearch/: VENDOR.md
tests/: conftest.py  test_answering.py  test_handler.py  test_models.py  test_search_index.py  test_slack_faq_review.py
tests_integration/: conftest.py  test_answering_integration.py
