[project]
name = "faq-assistant"
version = "0.1.0"
description = "Simplified DataTalks.Club Slack FAQ assistant on Cloudflare"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
faq-assistant = "faq_assistant.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
ingest = [
  "gitsource>=0.0.5",
  "requests>=2.32.0",
]
dev = [
  "workers-py",
  "workers-runtime-sdk",
]

[tool.ruff]
line-length = 100
target-version = "py312"
