[project]
name = "faq-assistant"
version = "0.1.0"
description = "Simplified DataTalks.Club Slack FAQ assistant on AWS Lambda"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "zerosearch>=0.3.0",
]

[project.scripts]
faq-assistant = "faq_assistant.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/faq_assistant"]

[dependency-groups]
dev = [
    "aws-sam-cli>=1.162.1",
]
ingest = [
  "gitsource>=0.0.5",
  "requests>=2.32.0",
]
test = [
  "pytest>=8",
]

[tool.ruff]
line-length = 100
target-version = "py312"
